--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -21,17 +21,28 @@
     android:minHeight="64dp">
 
     <TextView
-        android:id="@+id/mtrl_list_item_text"
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:paddingStart="16dp"
         android:paddingTop="16dp"
         android:paddingEnd="16dp"
-        android:text="Title"
-        android:textAppearance="?attr/textAppearanceHeadline3" />
+        android:paddingStart="16dp"
+        android:maxLines="1"
+        android:text="Text"
+        android:textAppearance="?attr/textAppearanceSubtitle1"/>
 <!--        android:textColor="@color/mtrl_list_item_tint"/>-->
 
-    <!--        android:textColor="@color/mtrl_list_item_tint"/>-->
+    <TextView
+        android:id="@+id/id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:layout_gravity="center_vertical"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:maxLines="2"
+        android:text="Subtext"
+        android:textAppearance="?attr/textAppearanceBody2"/>
+<!--        android:textColor="@color/mtrl_list_item_tint"/>-->
 
 </RelativeLayout>
